Updated docs to c891b3e

--- a/lab_08.html
+++ b/lab_08.html
@@ -214,8 +214,8 @@ this.setState({
 <p>And to use it from the Post component just do <code>this.props.post</code></p>
 <h2>Coding Exercise</h2>
 <ul>
-	<li>Create a separate component for a picture and render a hardcoded image. Create a new react route for it on <code>app/index.js</code>!</li>
-	<li>Pass the picture fetched from your server in the Feed component to a new photo component instead of using the hardcoded image source you took</li>
+	<li>Create a separate component for a picture and call it <code>Photo</code> and render a hardcoded image. Create a new react route for it on <code>app/index.js</code>!</li>
+	<li>Pass the picture fetched from your server in the Feed component to a new photo component instead of using the hardcoded img source you took</li>
 </ul>
 <h2>Coding Exercise (Challenge)</h2>
 <ul>
